Fixing logo alignement for the header(home page)

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -221,6 +221,25 @@
     =====================*/
 
 @media screen and (min-width:768px) and (max-width:1088px) {
+    /* ==========================================================================
+        Header
+       ========================================================================== */
+    .text-intro>p,
+    .navbar-brand {
+        left: 0px;
+    }
+    .intro-logo {
+        left: -0.8rem;
+    }
+    .is-multiline {
+        margin-left: 0px;
+    }
+    /* ==========================================================================
+        Header
+       ========================================================================== */
+    /* ==========================================================================
+        Footer
+       ========================================================================== */
     .footer-seconde {
         padding-left: 0px;
     }
@@ -231,6 +250,9 @@
     .footer-first {
         left: 0px;
     }
+    /* ==========================================================================
+        Footer
+       ========================================================================== */
 }
 
 
